--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "module": "es6",
+    // "module": "esnext", // add this line
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
